# experimental-mf

./: .gitignore  CMakeLists.txt
cmake/: FindMKL.cmake  FindTBB.cmake  ProtoBuf.cmake  lint.cmake
data/: .gitignore  getdata.cc  rawToProto_xlarge.py
resources/schema/: config.json
src/: .gitignore  admf.h  binary_record_source_filter.h  bld  blocking_queue.h  blocks.proto  condition_algorithm_8a.h  dpmf.h  filter_util.h  mf.h  model.cc  model.h  perf.h  random_merger.h  sync.h  train_config.h  util.h
tests/: model_test.cc  sync_test.cc  test_util.h
tools/: json2cpp.py  mf.cc  run.py
